[package]
name = "bellman_example"
version = "0.1.0"
authors = ["costa-wang <3162284013@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = { version = "0.8.0",features = ["gpu"]}
paired = { version = "0.19.0"}
rand = "0.7"
sha2 = "0.8"