[package]
name = "async_process"
version = "0.1.0"
authors = ["costa-wang <3162284013@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = { path = "../../../ocl/ocl" }
colorify = { version = "0.2.3" }
futures = { version = "0.3.5" }
futures-cpupool = { version = "0.1.8" }
chrono = { version = "0.4.11" }
